[package]
name = "videoland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
bitflags = "2.4.1"
bytemuck = { version = "1.14.3", features = ["derive"] }
crossbeam-channel = "0.5.12"
egui = { version = "0.29.1", features = ["bytemuck"] }
egui-wgpu = "0.29.1"
egui-winit = { version = "0.29.1", default-features = false, features = ["clipboard"] }
egui_tiles = "0.10.1"
glam = { version = "0.29.0", features = ["bytemuck", "serde"] }
hassle-rs = "0.10.0"
obj = "0.10.2"
pollster = "0.3.0"
raw-window-handle = "0.6.0"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
wgpu = { version = "22.1.0", default-features = false, features = ["spirv"] }
winit = "0.29.14"

[dependencies.windows]
version = "0.54.0"
optional = true
features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common", # Swapchain
    "Win32_Security", # Events
    "Win32_System_Threading", # Events and waiting
]

[features]
default = []
d3d12 = ["windows"]
