[package]
name = "ra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"
ash-window = "0.12.0"
bitflags = "2.4.1"
bytemuck = { version = "1.14.0", default-features = false }
gpu-alloc = "0.6.0"
gpu-alloc-ash = "0.6.0"
raw-window-handle = "0.5.0"
thiserror = "1.0.49"
tinyvec = "1.6.0"
tracing = "0.1.40"

[features]
default = ["vk"]
vk = []
