[package]
name = "smolgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
ash = "0.37"
ash-window = "0.12.0"
gpu-alloc = "0.5.3"
gpu-alloc-ash = "0.5.0"
raw-window-handle = "0.5.1"
tracing = "0.1.37"
