[package]
name = "videoland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
videoland_rhi = { path = "../videoland_rhi" }
videoland_egui = { path = "../videoland_egui" }
videoland_ecs = { path = "../videoland_ecs" }

ahash = { workspace = true }
bitflags = "2.4.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
egui = { workspace = true }
egui-winit = "0.24.1"
glam = { version = "0.24.2", features = ["bytemuck"] }
hassle-rs = "0.10.0"
indexmap = "2.0.2"
mlua = { version = "0.9.1", features = ["luau"] }
obj = "0.10.2"
physx-sys = "0.11.5"
raw-window-handle = "0.5.0"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tracing = { workspace = true }
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4"] }
winit = { version = "0.29.3", features = ["rwh_05"] }

[features]
default = ["vk"]
vk = []

[lints]
workspace = true
