[package]
name = "videoland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
videoland_ap = { workspace = true }
videoland_ecs = { workspace = true }
videoland_render2 = { workspace = true }
videoland_rhi = { workspace = true }

ahash = { workspace = true }
bitflags = "2.4.1"
bytemuck = { workspace = true, features = ["derive"] }
egui = { workspace = true }
egui-winit = { workspace = true }
glam = { workspace = true, features = ["bytemuck"] }
indexmap = "2.0.2"
mlua = { version = "0.9.1", features = ["luau"] }
physx-sys = "0.11.5"
raw-window-handle = "0.5.0"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.17"
uuid = { workspace = true, features = ["v4"] }
winit = { version = "0.29.3" }

[features]
default = ["vk"]
vk = []

[lints]
workspace = true
