[package]
name = "videoland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
videoland_ap = { path = "../videoland_ap" }
videoland_ecs = { path = "../videoland_ecs" }
videoland_egui = { path = "../videoland_egui" }
videoland_render2 = { path = "../videoland_render2" }
videoland_rhi = { path = "../videoland_rhi" }
videoland_sg = { path = "../videoland_sg" }

ahash = "0.8.11"
bitflags = "2.4.1"
bytemuck = { version = "1.14.3", features = ["derive"] }
crossbeam-channel = "0.5.12"
egui = "0.27.0"
egui-winit = { version = "0.27.0", default-features = false, features = ["clipboard"] }
glam = { version = "0.25.0", features = ["bytemuck"] }
hassle-rs = "0.10.0"
indexmap = "2.2.5"
physx-sys = "0.11.5"
raw-window-handle = "0.5.0"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
uuid = { version = "1.7.0", features = ["v4"] }
winit = "0.29.14"

[features]
default = ["vk"]
vk = []
