[package]
name = "videoland_ap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { workspace = true }
glam = { workspace = true }
hassle-rs = "0.10.0"
obj = "0.10.2"
ufbx = { git = "https://github.com/ufbx/ufbx-rust" }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
