[package]
name = "videoland_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
videoland_ecs = { path = "../videoland_ecs" }
videoland_egui = { path = "../videoland_egui" }

egui = "0.27.0"
egui_tiles = "0.8.0"
indexmap = "2.2.5"
