[package]
name = "videoland_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
videoland_render2 = { workspace = true }

egui = { workspace = true }
egui-winit = { version = "0.25.0", default-features = false, features = ["clipboard"] }
indexmap = { workspace = true }
winit = { version = "0.29.3" }

[lints]
workspace = true
