[package]
name = "videoland_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
videoland_render2 = { path = "../videoland_render2" }

egui = "0.27.0"
egui-winit = { version = "0.27.0", default-features = false, features = ["clipboard"] }
winit = "0.29.14"
