[package]
name = "videoland_render2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
videoland_ap = { workspace = true }
videoland_ecs = { workspace = true }
videoland_rhi = { workspace = true }

ahash = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
egui = { workspace = true, features = ["bytemuck"] }
glam = { workspace = true, features = ["bytemuck"] }
uuid = { workspace = true, features = ["v4"] }
winit = { workspace = true, features = ["rwh_05"] }

[lints]
workspace = true
