[package]
name = "videoland_render2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
videoland_ap = { path = "../videoland_ap" }
videoland_ecs = { path = "../videoland_ecs" }
videoland_rhi = { path = "../videoland_rhi" }

ahash = "0.8.11"
bytemuck = { version = "1.14.3", features = ["derive"] }
egui = { version = "0.27.0", features = ["bytemuck"] }
glam = { version = "0.25.0", features = ["bytemuck"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4"] }
winit = { version = "0.29.14" }
