[package]
name = "videoland_rhi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
bytemuck = { version = "1.14.3", default-features = false }
raw-window-handle = "0.6.0"
thiserror = "1.0.57"
tracing = "0.1.40"

[dependencies.windows]
version = "0.54.0"
optional = true
features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common", # Swapchain
    "Win32_Security", # Events
    "Win32_System_Threading", # Events and waiting
]

[features]
default = ["d3d12"]
d3d12 = ["windows"]
